--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -9,72 +9,16 @@
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-  <%= f.label :stocks_and_stock_funds, "Stocks and stock funds" %>
+  <%= f.label :asset_value, "Asset value" %>
   <div class="row">
     <div class='col-md-6 mb-1'>
-      <%= f.text_field :stocks_and_stock_funds_gteq, :class => "form-control", :placeholder => "Stocks and stock funds greater than or equal to" %>
+      <%= f.text_field :asset_value_gteq, :class => "form-control", :placeholder => "Asset value greater than or equal to" %>
     </div>
     <div class='col-md-6'>
-      <%= f.text_field :stocks_and_stock_funds_lteq, :class => "form-control", :placeholder => "Stocks and stock funds less than or equal to" %>
+      <%= f.text_field :asset_value_lteq, :class => "form-control", :placeholder => "Asset value less than or equal to" %>
     </div>
   </div>
 </div>
-
-<div class="form-group">
-    <%= f.label :asset_detailed_info_cont, "Asset detailed info contains" %>
-    <%= f.text_field :asset_detailed_info_cont, :class => "form-control", :placeholder => "Asset detailed info contains" %>
-  </div>
-
-<div class="form-group">
-    <%= f.label :health_savings_account_cont, "Health savings account contains" %>
-    <%= f.text_field :health_savings_account_cont, :class => "form-control", :placeholder => "Health savings account contains" %>
-  </div>
-
-<div class="form-group">
-    <%= f.label :bonds_cont, "Bonds contains" %>
-    <%= f.text_field :bonds_cont, :class => "form-control", :placeholder => "Bonds contains" %>
-  </div>
-
-<div class="form-group">
-  <%= f.label :asset_total, "Asset total" %>
-  <div class="row">
-    <div class='col-md-6 mb-1'>
-      <%= f.text_field :asset_total_gteq, :class => "form-control", :placeholder => "Asset total greater than or equal to" %>
-    </div>
-    <div class='col-md-6'>
-      <%= f.text_field :asset_total_lteq, :class => "form-control", :placeholder => "Asset total less than or equal to" %>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <%= f.label :real_estate, "Real estate" %>
-  <div class="row">
-    <div class='col-md-6 mb-1'>
-      <%= f.text_field :real_estate_gteq, :class => "form-control", :placeholder => "Real estate greater than or equal to" %>
-    </div>
-    <div class='col-md-6'>
-      <%= f.text_field :real_estate_lteq, :class => "form-control", :placeholder => "Real estate less than or equal to" %>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <%= f.label :retirement_account, "Retirement account" %>
-  <div class="row">
-    <div class='col-md-6 mb-1'>
-      <%= f.text_field :retirement_account_gteq, :class => "form-control", :placeholder => "Retirement account greater than or equal to" %>
-    </div>
-    <div class='col-md-6'>
-      <%= f.text_field :retirement_account_lteq, :class => "form-control", :placeholder => "Retirement account less than or equal to" %>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-    <%= f.label :cash_cont, "Cash contains" %>
-    <%= f.text_field :cash_cont, :class => "form-control", :placeholder => "Cash contains" %>
-  </div>
 
 <div class="form-group">
           <%= f.label :created_at, "Created at" %>
@@ -116,7 +60,29 @@
           });
       </script>
 
-        
+        <div class="form-group">
+  <%= f.label :age, "User Age" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :user_age_gteq, :class => "form-control", :placeholder => "User Age greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :user_age_lteq, :class => "form-control", :placeholder => "User Age less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :checking_account, "AssetType Checking account" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :asset_type_checking_account_gteq, :class => "form-control", :placeholder => "AssetType Checking account greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :asset_type_checking_account_lteq, :class => "form-control", :placeholder => "AssetType Checking account less than or equal to" %>
+    </div>
+  </div>
+</div>
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
@@ -132,27 +98,29 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Stocks and stock funds</th>
-        <th>Cash</th>
-        <th>Retirement account</th>
-        <th>Real estate</th>
-        <th>Asset total</th>
-        <th>Bonds</th>
-        <th>Health savings account</th>
-        <th>Asset detailed info</th>
+        <th>Asset type</th>
+        <th>User</th>
+        <th>Asset value</th>
         <th>Actions</th>
       </tr>
 
       <% @assets.each do |asset| %>
       <tr>
-        <td><%= asset.stocks_and_stock_funds %></td>
-        <td><%= asset.cash %></td>
-        <td><%= asset.retirement_account %></td>
-        <td><%= asset.real_estate %></td>
-        <td><%= asset.asset_total %></td>
-        <td><%= asset.bonds %></td>
-        <td><%= asset.health_savings_account %></td>
-        <td><%= asset.asset_detailed_info %></td>
+        <td>
+          <% if asset.asset_type.present? %>
+            <a href="/asset_types/<%= asset.asset_type.id %>">
+              <%= asset.asset_type.checking_account %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if asset.user.present? %>
+            <a href="/users/<%= asset.user.id %>">
+              <%= asset.user.age %>
+            </a>
+          <% end %>
+        </td>
+        <td><%= asset.asset_value %></td>
         <td>
           <a href="/assets/<%= asset.id %>" class="btn btn-primary">Show</a>
           <a href="/assets/<%= asset.id %>/edit" class="btn btn-warning">Edit</a>
