--- a/app/views/liabilities/index.html.erb
+++ b/app/views/liabilities/index.html.erb
@@ -9,42 +9,25 @@
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-  <%= f.label :mortgage, "Mortgage" %>
+  <%= f.label :liabilities_value, "Liabilities value" %>
   <div class="row">
     <div class='col-md-6 mb-1'>
-      <%= f.text_field :mortgage_gteq, :class => "form-control", :placeholder => "Mortgage greater than or equal to" %>
+      <%= f.text_field :liabilities_value_gteq, :class => "form-control", :placeholder => "Liabilities value greater than or equal to" %>
     </div>
     <div class='col-md-6'>
-      <%= f.text_field :mortgage_lteq, :class => "form-control", :placeholder => "Mortgage less than or equal to" %>
+      <%= f.text_field :liabilities_value_lteq, :class => "form-control", :placeholder => "Liabilities value less than or equal to" %>
     </div>
   </div>
 </div>
 
 <div class="form-group">
-    <%= f.label :liabilities_total_cont, "Liabilities total contains" %>
-    <%= f.text_field :liabilities_total_cont, :class => "form-control", :placeholder => "Liabilities total contains" %>
-  </div>
-
-<div class="form-group">
-  <%= f.label :credit_cards, "Credit cards" %>
+  <%= f.label :liabilities_value_total_id, "Liabilities value total" %>
   <div class="row">
     <div class='col-md-6 mb-1'>
-      <%= f.text_field :credit_cards_gteq, :class => "form-control", :placeholder => "Credit cards greater than or equal to" %>
+      <%= f.text_field :liabilities_value_total_id_gteq, :class => "form-control", :placeholder => "Liabilities value total greater than or equal to" %>
     </div>
     <div class='col-md-6'>
-      <%= f.text_field :credit_cards_lteq, :class => "form-control", :placeholder => "Credit cards less than or equal to" %>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <%= f.label :student_loan, "Student loan" %>
-  <div class="row">
-    <div class='col-md-6 mb-1'>
-      <%= f.text_field :student_loan_gteq, :class => "form-control", :placeholder => "Student loan greater than or equal to" %>
-    </div>
-    <div class='col-md-6'>
-      <%= f.text_field :student_loan_lteq, :class => "form-control", :placeholder => "Student loan less than or equal to" %>
+      <%= f.text_field :liabilities_value_total_id_lteq, :class => "form-control", :placeholder => "Liabilities value total less than or equal to" %>
     </div>
   </div>
 </div>
@@ -89,7 +72,29 @@
           });
       </script>
 
-        
+        <div class="form-group">
+  <%= f.label :age, "User Age" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :user_age_gteq, :class => "form-control", :placeholder => "User Age greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :user_age_lteq, :class => "form-control", :placeholder => "User Age less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :mortgage, "LiabilityType Mortgage" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :liabilities_type_mortgage_gteq, :class => "form-control", :placeholder => "LiabilityType Mortgage greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :liabilities_type_mortgage_lteq, :class => "form-control", :placeholder => "LiabilityType Mortgage less than or equal to" %>
+    </div>
+  </div>
+</div>
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
@@ -105,19 +110,31 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Mortgage</th>
-        <th>Student loan</th>
-        <th>Credit cards</th>
-        <th>Liabilities total</th>
+        <th>Liabilities value total</th>
+        <th>User</th>
+        <th>Liabilities type</th>
+        <th>Liabilities value</th>
         <th>Actions</th>
       </tr>
 
       <% @liabilities.each do |liability| %>
       <tr>
-        <td><%= liability.mortgage %></td>
-        <td><%= liability.student_loan %></td>
-        <td><%= liability.credit_cards %></td>
-        <td><%= liability.liabilities_total %></td>
+        <td><%= liability.liabilities_value_total_id %></td>
+        <td>
+          <% if liability.user.present? %>
+            <a href="/users/<%= liability.user.id %>">
+              <%= liability.user.age %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if liability.liabilities_type.present? %>
+            <a href="/liability_types/<%= liability.liabilities_type.id %>">
+              <%= liability.liabilities_type.mortgage %>
+            </a>
+          <% end %>
+        </td>
+        <td><%= liability.liabilities_value %></td>
         <td>
           <a href="/liabilities/<%= liability.id %>" class="btn btn-primary">Show</a>
           <a href="/liabilities/<%= liability.id %>/edit" class="btn btn-warning">Edit</a>
