--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -48,11 +48,6 @@
   </div>
 
 <div class="form-group">
-    <%= f.label :individual_net_worth_cont, "Individual net worth contains" %>
-    <%= f.text_field :individual_net_worth_cont, :class => "form-control", :placeholder => "Individual net worth contains" %>
-  </div>
-
-<div class="form-group">
     <%= f.label :last_name_cont, "Last name contains" %>
     <%= f.text_field :last_name_cont, :class => "form-control", :placeholder => "Last name contains" %>
   </div>
@@ -114,6 +109,98 @@
   </div>
 </div>
 
+<div class="form-group">
+          <%= f.label :created_at, "Asset Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='assetsgteqcreated_atPicker'>
+                  <%= f.text_field :assets_created_at_gteq, :class => "form-control", :placeholder => "Asset Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='assetslteqcreated_atPicker'>
+                  <%= f.text_field :assets_created_at_lteq, :class => "form-control", :placeholder => "Asset Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#assetsgteqcreated_atPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#assetslteqcreated_atPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#assetsgteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#assetslteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#assetslteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#assetsgteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+          <%= f.label :created_at, "Liability Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='liabilitiesgteqcreated_atPicker'>
+                  <%= f.text_field :liabilities_created_at_gteq, :class => "form-control", :placeholder => "Liability Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='liabilitieslteqcreated_atPicker'>
+                  <%= f.text_field :liabilities_created_at_lteq, :class => "form-control", :placeholder => "Liability Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#liabilitiesgteqcreated_atPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#liabilitieslteqcreated_atPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#liabilitiesgteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#liabilitieslteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#liabilitieslteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#liabilitiesgteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+  <%= f.label :user_id, "HistoricalNetWorth User" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :historical_net_worths_user_id_gteq, :class => "form-control", :placeholder => "HistoricalNetWorth User greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :historical_net_worths_user_id_lteq, :class => "form-control", :placeholder => "HistoricalNetWorth User less than or equal to" %>
+    </div>
+  </div>
+</div>
+
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
       <a href="/users" class="btn btn-default btn-block mb-1">Clear filters</a>
@@ -131,7 +218,6 @@
         <th>Age</th>
         <th>First name</th>
         <th>Last name</th>
-        <th>Individual net worth</th>
         <th>Individual retirement goal</th>
         <th>Annual savings</th>
         <th>Current income</th>
@@ -145,7 +231,6 @@
         <td><%= user.age %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= user.individual_net_worth %></td>
         <td><%= user.individual_retirement_goal %></td>
         <td><%= user.annual_savings %></td>
         <td><%= user.current_income %></td>
