--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="/liability_types">Liability Types</a></li>
+          <li><a href="/historical_net_worths">Historical Net Worths</a></li>
+          <li><a href="/asset_types">Asset Types</a></li>
           <li><a href="/retirement_assumptions">Retirement Assumptions</a></li>
           <li><a href="/retirement_calculations">Retirement Calculations</a></li>
           <li><a href="/liabilities">Liabilities</a></li>
@@ -51,8 +54,31 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
+          <% if current_user.present? %>
+            <li>
+              <a href="/users/edit">
+                <%= current_user.age %>
+              </a>
+            </li>
+
+            <li>
+              <a href="/users/sign_out" data-method="delete" rel="nofollow">
+                Sign Out
+              </a>
+            </li>
+          <% else %>
+            <li>
+              <a href="/users/sign_up">
+                Sign Up
+              </a>
+            </li>
+
+            <li>
+              <a href="/users/sign_in">
+                Sign In
+              </a>
+            </li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
