--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,6 @@
       <dt>Last name</dt>
       <dd><%= @user.last_name %></dd>
 
-      <dt>Individual net worth</dt>
-      <dd><%= @user.individual_net_worth %></dd>
-
       <dt>Individual retirement goal</dt>
       <dd><%= @user.individual_retirement_goal %></dd>
 
@@ -38,12 +35,6 @@
       <a href="/users" class="btn btn-primary">
         Back
       </a>
-      <a href="/users/<%= @user.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_user/<%= @user.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
     </div>
   </div>
 </div>
@@ -60,7 +51,7 @@
       <% @user.net_worths.each do |net_worth| %>
         <li class="list-group-item">
           <a href="/net_worths/<%= net_worth.id %>">
-            <%= net_worth.asset_total_id %>
+            <%= net_worth.asset_value_total_id %>
           </a>
           <div class="btn-group btn-group-xs pull-right">
             <a href="/net_worths/<%= net_worth.id %>" class="btn btn-primary">
@@ -75,56 +66,6 @@
           </div>
         </li>
       <% end %>
-
-      <li class="list-group-item">
-        <form action="/create_net_worth" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-
-      <!-- Label and input for asset_total_id -->
-      <div class="form-group">
-        <label for="asset_total_id" class="control-label">
-          Asset total
-        </label>
-
-        <%= select_tag(:asset_total_id, options_from_collection_for_select(Asset.all, :id, :stocks_and_stock_funds), :class => "form-control") %>
-      </div>
-
-      <!-- Label and input for liabilities_total_id -->
-      <div class="form-group">
-        <label for="liabilities_total_id" class="control-label">
-          Liabilities total
-        </label>
-
-        <%= select_tag(:liabilities_total_id, options_from_collection_for_select(Liability.all, :id, :mortgage), :class => "form-control") %>
-      </div>
-
-      <!-- Label and input for calculated_net_worth -->
-      <div class="form-group">
-        <label for="calculated_net_worth" class="control-label">
-          Calculated net worth
-        </label>
-
-        <input type="text" id="calculated_net_worth" name="calculated_net_worth" placeholder="Calculated net worth" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for user_id -->
-      <input type="hidden" name="user_id" value="<%= @user.id %>">
-
-      <!-- Label and input for net_worth_date -->
-      <div class="form-group">
-        <label for="net_worth_date" class="control-label">
-          Net worth date
-        </label>
-
-        <input type="text" id="net_worth_date" name="net_worth_date" placeholder="Net worth date" class="form-control" value="">
-      </div>
-
-      <button class="btn btn-block btn-success">
-        Create Net Worth
-      </button>
-    </form>
-      </li>
     </ul>
   </div>
 </div>
@@ -156,101 +97,68 @@
           </div>
         </li>
       <% end %>
+    </ul>
+  </div>
+</div>
 
-      <li class="list-group-item">
-        <form action="/create_retirement_assumption" method="post">
-      <!-- Hidden input for authenticity token to protect from forgery -->
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+<!-- A User has many assets -->
 
-      <!-- Label and input for age_id -->
-      <div class="form-group">
-        <label for="age_id" class="control-label">
-          Age
-        </label>
-
-        <input type="text" id="age_id" name="age_id" placeholder="Age" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for last_year_saving_id -->
-      <div class="form-group">
-        <label for="last_year_saving_id" class="control-label">
-          Last year saving
-        </label>
-
-        <input type="text" id="last_year_saving_id" name="last_year_saving_id" placeholder="Last year saving" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for investment_return -->
-      <div class="form-group">
-        <label for="investment_return" class="control-label">
-          Investment return
-        </label>
-
-        <input type="text" id="investment_return" name="investment_return" placeholder="Investment return" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for inflation -->
-      <div class="form-group">
-        <label for="inflation" class="control-label">
-          Inflation
-        </label>
-
-        <input type="text" id="inflation" name="inflation" placeholder="Inflation" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for increase_in_savings -->
-      <div class="form-group">
-        <label for="increase_in_savings" class="control-label">
-          Increase in savings
-        </label>
-
-        <input type="text" id="increase_in_savings" name="increase_in_savings" placeholder="Increase in savings" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for annual_savings -->
-      <div class="form-group">
-        <label for="annual_savings" class="control-label">
-          Annual savings
-        </label>
-
-        <input type="text" id="annual_savings" name="annual_savings" placeholder="Annual savings" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for initial_savings -->
-      <div class="form-group">
-        <label for="initial_savings" class="control-label">
-          Initial savings
-        </label>
-
-        <input type="text" id="initial_savings" name="initial_savings" placeholder="Initial savings" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for retirement_income -->
-      <div class="form-group">
-        <label for="retirement_income" class="control-label">
-          Retirement income
-        </label>
-
-        <input type="text" id="retirement_income" name="retirement_income" placeholder="Retirement income" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for retirement_age -->
-      <div class="form-group">
-        <label for="retirement_age" class="control-label">
-          Retirement age
-        </label>
-
-        <input type="text" id="retirement_age" name="retirement_age" placeholder="Retirement age" class="form-control" value="">
-      </div>
-
-      <!-- Label and input for user_id -->
-      <input type="hidden" name="user_id" value="<%= @user.id %>">
-
-      <button class="btn btn-block btn-success">
-        Create Retirement Assumption
-      </button>
-    </form>
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Assets
       </li>
+
+      <% @user.assets.each do |asset| %>
+        <li class="list-group-item">
+          <a href="/assets/<%= asset.id %>">
+            <%= asset.created_at %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/assets/<%= asset.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/assets/<%= asset.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_asset/<%= asset.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A User has many liabilities -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Liabilities
+      </li>
+
+      <% @user.liabilities.each do |liability| %>
+        <li class="list-group-item">
+          <a href="/liabilities/<%= liability.id %>">
+            <%= liability.created_at %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/liabilities/<%= liability.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/liabilities/<%= liability.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_liability/<%= liability.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
     </ul>
   </div>
 </div>
@@ -277,6 +185,37 @@
               <i class="fa fa-edit"></i>
             </a>
             <a href="/delete_retirement_calculation/<%= retirement_calculation.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A User has many historical_net_worths -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Historical_net_worths
+      </li>
+
+      <% @user.historical_net_worths.each do |historical_net_worth| %>
+        <li class="list-group-item">
+          <a href="/historical_net_worths/<%= historical_net_worth.id %>">
+            <%= historical_net_worth.user_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/historical_net_worths/<%= historical_net_worth.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/historical_net_worths/<%= historical_net_worth.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_historical_net_worth/<%= historical_net_worth.id %>" class="btn btn-danger" rel="nofollow">
               <i class="fa fa-trash-o"></i>
             </a>
           </div>
