--- a/app/views/net_worths/index.html.erb
+++ b/app/views/net_worths/index.html.erb
@@ -53,3 +53,7 @@
     <%= paginate @net_worths, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
+
+<div class="container">
+  <div class="row"
+</div>
